ci/event/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-eventsource-service
  namespace: argo-events
spec:
  selector:
    eventsource-name: test-eventsource
  ports:
    - protocol: TCP
      port: 14000
      targetPort: 14000
  type: ClusterIP 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-eventsource-ingress
  namespace: argo-events
spec:
  rules:
    - host: ci.promptshub.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-eventsource-service
                port:
                  number: 14000
